--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,7 +4,7 @@
   <!-- App navigation bar markup. -->
   <div class="ms-NavBar">
     <ul class="ms-NavBar-items">
-      <li class="navbar-header">Microsoft Graph Connect sample</li>
+      <li class="navbar-header">Inbox</li>
       <li class="ms-NavBar-item ms-NavBar-item--right" ng-show="isAuthenticated()" ng-click="logout()"><i class="ms-Icon ms-Icon--x"></i> Disconnect</li>
     </ul>
   </div>
@@ -12,16 +12,19 @@
   <!-- App main content markup. -->
   <div class="ms-Grid-col ms-u-mdPush1 ms-u-md9 ms-u-lgPush1 ms-u-lg6">
     <div ng-hide="isAuthenticated()">
-      <p class="ms-font-xl">Use the button below to connect to Microsoft Graph.</p>
+      <p class="ms-font-xl">Use the button below to connect to Login.</p>
       <button class="ms-Button" ng-click="login()">
         <span class="ms-Button-label">Connect</span>
       </button>
     </div>
     <div ng-show="isAuthenticated()">
-      <div>
+      <div class="top">
         <h2 class="ms-font-xxl ms-fontWeight-semibold">Hi, {{ displayName }}!</h2>
         <button class="ms-Button" ng-click="refresh()">
           <span class="ms-Button-label">Refresh</span>
+        </button>
+        <button class="ms-Button" ng-click="findKeyWord()">
+          <span class="ms-Button-label">HighLight Key Word</span>
         </button>
       </div>
       <div>
